<?xml version="1.0"?>
<package>
  <name>rqt_grasp_viewer</name>
  <version>0.0.1</version>
  <description>rqt_grasp_viewer is a GUI to selct grasps to view in rviz</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume WALCK</maintainer>
  <license>GPL</license>
  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume WALCK</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>grasp_viewer</run_depend>
  <run_depend>grasping_msg</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
